tests/ui/rfcs/rfc-2632-const-trait-impl/effects/ice-112822-expected-type-for-param.stderr
error[E0658]: const closures are experimental
  --> $DIR/ice-112822-expected-type-for-param.rs:6:5
   |
LL |     const move || {
   |     ^^^^^
   |
   = note: see issue #106003 <https://github.com/rust-lang/rust/issues/106003> for more information
   = help: add `#![feature(const_closures)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/ice-112822-expected-type-for-param.rs:3:32
   |
LL | const fn test() -> impl ~const Fn() {
   |                                ^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/ice-112822-expected-type-for-param.rs:3:32
   |
LL | const fn test() -> impl ~const Fn() {
   |                                ^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: can't compare `&u8` with `&u8`
  --> $DIR/ice-112822-expected-type-for-param.rs:11:17
   |
LL |                 assert_eq!(first, &b'f');
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&u8 == &u8`
   |
   = help: the trait `~const PartialEq<&u8>` is not implemented for `&u8`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.
